--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
     "name": "callfire",
     "main": "./callfire.js",
-    "version": "0.0.1",
-    "dependencies": {
-        "http": "0.10.x"
-    }
+    "version": "0.0.1"
 }
