--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "callfire",
     "main": "./callfire.js",
-    "version": "0.0.2"
+    "version": "0.0.3",
+    "dependencies": {
+        "libxmljs": ">=0.8.1"
+    }
 }
